fix(EDG-546): remove preview API and commons-io dependency
- Replace StructuredTaskScope (JEP 505, still preview in JDK 25) with
  Executors.newVirtualThreadPerTaskExecutor() which is fully stable;
  semantics are identical — virtual-thread fan-out, sequential result
  collection after executor close() awaits all tasks
- Replace IOUtils.toString() with InputStream.readAllBytes() to remove
  the undeclared commons-io compile dependency

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>